@@ -1,3 +1,7 @@
+9 January 2008: Wouter
+	- fixup openssl RAND problem, when the system is not configured to
+	  give entropy, and the rng needs to be seeded.
+
 4 January 2008: Wouter
 	- document misconfiguration in private network.
 
